--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Build outputs
-dist/
+# Build outputs (commented out to make dist visible)
+# dist/
 
 # OS generated files
 .DS_Store
