🤖 Add automated token-to-CSS generation workflows
- Add intelligent token sync workflow (token-sync.yml)
- Add simple CSS builder workflow (build-css.yml)
- Enhanced sync-tokens.js with better error handling
- Added automation documentation (AUTOMATION.md)
- Updated package.json with sync scripts

Features:
✅ Auto-detects Figma vs Style Dictionary token changes
✅ Bidirectional sync between formats
✅ Automatic CSS generation and deployment
✅ Smart commit messages and GitHub Pages updates
✅ Manual workflow triggers available

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build:basic": "style-dictionary build",
     "clean": "rm -rf dist/",
     "build:clean": "npm run clean && npm run build",
-    "dev": "npm run build && open demo.html"
+    "dev": "npm run build && open demo.html",
+    "sync:from-figma": "node sync-tokens.js figma-to-style && npm run build",
+    "sync:to-figma": "node sync-tokens.js style-to-figma"
   },
   "dependencies": {},
   "devDependencies": {
