🔧 Fix multiple GitHub Actions issues
✅ Token Sync Workflow Fixes:
- Replace git rebase with merge strategy (safer for generated files)
- Add conflict resolution for dist/ files using --ours strategy
- Configure git to handle divergent branches properly
- Add _headers file restoration to prevent deletion

✅ Cloudflare Pages Workflow Fixes:
- Add deployments: write permission
- Remove gitHubToken to avoid GitHub integration issues

🎯 This fixes:
- Git merge conflicts in token sync
- Missing _headers file for Cloudflare cache control
- Permissions errors in Cloudflare deployment

--- a/.github/workflows/deploy-cloudflare.yml
+++ b/.github/workflows/deploy-cloudflare.yml
@@ -5,6 +5,13 @@ on:
     branches: [ main ]
   workflow_dispatch:
 
+# Add GitHub permissions for deployments
+permissions:
+  contents: read
+  deployments: write
+  statuses: write
+  checks: write
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -41,7 +48,7 @@ jobs:
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           projectName: design-token-system
           directory: dist
-          gitHubToken: ${{ secrets.GITHUB_TOKEN }}
+          # Remove gitHubToken to avoid permissions issues
           
       - name: Summary
         run: |
