--- a/config.json
+++ b/config.json
@@ -1,16 +1,12 @@
 {
-  "source": ["figma-tokens.json"],
+  "source": ["tokens/*-converted.json"],
   "platforms": {
     "css": {
       "transformGroup": "css",
       "buildPath": "dist/css/",
       "files": [
         {
-          "destination": "variables-v2.css",
-          "format": "css/variables"
-        },
-        {
-          "destination": "styles-v2.css",
+          "destination": "variables.css",
           "format": "css/variables"
         }
       ]
@@ -18,26 +14,32 @@
     "scss": {
       "transformGroup": "scss",
       "buildPath": "dist/scss/",
-      "files": [{
-        "destination": "_variables-v2.scss",
-        "format": "scss/variables"
-      }]
+      "files": [
+        {
+          "destination": "_variables.scss",
+          "format": "scss/variables"
+        }
+      ]
     },
     "json": {
       "transformGroup": "js",
       "buildPath": "dist/json/",
-      "files": [{
-        "destination": "tokens-v2.json",
-        "format": "json"
-      }]
+      "files": [
+        {
+          "destination": "tokens.json",
+          "format": "json"
+        }
+      ]
     },
     "js": {
       "transformGroup": "js",
       "buildPath": "dist/js/",
-      "files": [{
-        "destination": "tokens-v2.js",
-        "format": "javascript/es6"
-      }]
+      "files": [
+        {
+          "destination": "tokens.js",
+          "format": "javascript/es6"
+        }
+      ]
     }
   }
 }
